<resources>
    <string name="app_name">Drone</string>
    <string name="action_settings">Settings</string>
    <string name="connection_video">For image stream:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connection_mqtt">For drone control/logging:</string>
    <string name="domain">&lt;domain&gt;.mybluemix.net</string>


    <string name="time_from">From:</string>
    <string name="time_until">Until:</string>

    <string name="min_date">01/01/2010</string>

    <string name="organisation">Organisation</string>
    <string name="auth_token">"Auth-token</string>
    <string name="deviceID">Device ID</string>
    <string name="updateCreds">Update Credentials</string>
    <string name="connect">Connect</string>

    <string name="clear_sensor_data">Clear Sensor Data</string>

    <string name="api_key">API Key</string>
    <string name="api_token">API Token</string>
    <string name="drawer_open">Open Nav Drawer</string>
    <string name="drawer_close">Close Nav Drawer</string>

    <string name="mqtt_live_data">MQTT Live Data</string>
    <string name="load_saved_data">Load Saved Data</string>


    <string name="temperature">Temperature</string>
    <string name="altitude">Altitude</string>
    <string name="airpurity">Air Purity</string>

    <string-array name="page_titles">
        <item>Connection</item>
        <item>Video</item>
        <item>Control</item>
        <item>Log</item>
        <item>Map</item>
        <item>Graph</item>
    </string-array>
</resources>
