<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp">

    <EditText
        android:id="@+id/domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/domain"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/organisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/organisation"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/deviceID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deviceID"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/auth_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/auth_token"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/updateCreds"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/connect"
        android:textSize="30sp"
        />
</LinearLayout>