<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/time_choice_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="@dimen/appbar_padding_top">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_from"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <DatePicker
            android:id="@+id/from_date_picker"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:minDate="@string/min_date"
            />

        <TimePicker
            android:id="@+id/from_time_picker"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/accept"
            android:text="Accept"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_until"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <DatePicker
            android:id="@+id/till_date_picker"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:minDate="@string/min_date"
            />

        <TimePicker
            android:id="@+id/till_time_picker"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/cancel"
            android:text="Cancel"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/temperature_check"
            android:text="@string/temperature"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/altitude_check"
            android:text="@string/altitude"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/airpurity_check"
            android:text="@string/airpurity"/>
    </LinearLayout>

</LinearLayout>